@@ -1151,7 +1151,8 @@ function pxToInt(v) {
 // san francisco and zooming to new your will lead to a negative 5 digit
 // negative coord).
 function isRelativeCoord(v) {
-    return isset(v) && ((!isInt(v) && !isFloat(v)) || (v.length === 6 && v.charAt(0) != "-"));
+    return isset(v) && ((!isInt(v) && !isFloat(v))
+                        || (v.length === 6 && v.charAt(0) != "-" && v.indexOf(".") == -1));
 }
 
 // Helper function to determine the number of entries in an object
