@@ -6,6 +6,7 @@ Frontend:
 Worldmap:
   * FIX: Fixed errors when saving viewport as new map
   * FIX: Fixed rare issue when cloning just added objects
+  * FIX: Fixed broken worldmap when using relative objects
 
 Installer:
   * FIX: Fixed displaying wrong backend option "-b" in summary output
